# axonhub

./: .gitignore  .goreleaser.yml  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.rust  Makefile  README.md  README.zh-CN.md  config.example.yml  docker-compose.rust.yml  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agent/rules/: backend.md
.agent/summary/: go-static-file-serving.md  rust-static-file-exploration.md  ulw-rust-migration.md
.github/workflows/: docker-publish.yml  docker.yml  lint.yml  release.yml  test.yml
.sisyphus/evidence/: task-1-parity-inventory-gap.txt  task-1-parity-inventory.json  task-2-known-gap.diff  task-2-stability.txt
.sisyphus/notepads/rust-go-backend-parity/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/rust-go-openai-parity/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/parity/: go_oracle_test.go  suites.json
.sisyphus/parity/fixtures/: admin_system_status_initial.json  cli_version.json  config_get_cache_default_expiration_alias.json  config_get_server_name.json  openapi_graphql_create_llm_api_key.json  v1_models_basic.json
.sisyphus/plans/: rust-go-openai-parity.md
.sisyphus/tools/: parity_inventory.py  parity_oracle.py
apps/axonhub-server/: Cargo.toml
apps/axonhub-server/src/: main.rs  sqlite_foundation.rs
apps/axonhub-server/src/app/: build_info.rs  capabilities.rs  cli.rs  metrics.rs  mod.rs  parity_oracle.rs  server.rs  services.rs  tests.rs  tracing.rs
apps/axonhub-server/src/app/test_support/: contract_oracle.rs  mod.rs  tests.rs
apps/axonhub-server/src/foundation/: admin.rs  admin_operational.rs  admin_sqlite_support.rs  authz.rs  bootstrap_seaorm.rs  circuit_breaker.rs  graphql.rs  graphql_sqlite_support.rs  identity.rs  identity_service.rs  identity_sqlite_support.rs  mod.rs  openai_v1.rs  openai_v1_sqlite_support.rs  passwords.rs  ports.rs  prompt_protection.rs  provider_edge.rs  request_context.rs  request_context_service.rs  request_context_sqlite_support.rs  schema_ownership.rs  seaorm.rs  shared.rs  sqlite_support.rs  system.rs  tests.rs
apps/axonhub-server/src/foundation/admin/: oauth.rs
apps/axonhub-server/src/foundation/repositories/: admin.rs  common.rs  graphql.rs  identity.rs  mod.rs  openai_v1.rs  prompt_protection.rs  request_context.rs
apps/axonhub-server/src/foundation/schema_governance/: mod.rs  schema_ownership.rs
apps/axonhub-server/tests/: runtime_driver_guard.rs  runtime_raw_sql_guard.rs
cmd/axonhub/: main.go
cmd/schema/: go.mod  go.sum
conf/: conf.go
crates/axonhub-config/: Cargo.toml
crates/axonhub-config/src/: contract.rs  env.rs  legacy.rs  lib.rs  loader.rs  preview.rs  tests.rs  types.rs  validation.rs
crates/axonhub-config/tests/: traces_invalid_exporter_type_rejected.rs
crates/axonhub-db-entity/: Cargo.toml
crates/axonhub-db-entity/src/: lib.rs
crates/axonhub-db-migration/: Cargo.toml
crates/axonhub-db-migration/src/: lib.rs  m20260325_000001_supported_slice_schema.rs  m20260326_000001_bootstrap_control_schema.rs  m20260326_000002_request_context_schema.rs  m20260326_000003_catalog_schema.rs  m20260326_000004_request_ledger_schema.rs  m20260326_000005_operational_schema.rs  m20260327_000006_persistence_extension_schema.rs  m20260402_000007_operational_runtime_schema.rs  m20260413_000008_identity_token_version.rs
crates/axonhub-http/: Cargo.toml
crates/axonhub-http/src/: errors.rs  lib.rs  middleware.rs  models.rs  ports.rs  routes.rs  state.rs  tests.rs  transport.rs
crates/axonhub-http/src/handlers/: admin.rs  anthropic.rs  doubao.rs  gemini.rs  graphql.rs  jina.rs  mod.rs  openai_v1.rs  provider_edge.rs  static_files.rs  unported.rs
crates/axonhub-http/src/handlers/admin/: oauth.rs
deploy/: install.ps1  install.sh  upgrade.ps1  upgrade.sh
deploy/helm/: README.md  values-production.yaml  values.yaml
docs/en/api-reference/: image-generation.md  openai-api.md
docs/en/deployment/: configuration.md  docker.md
docs/en/development/: development.md
docs/en/getting-started/: quick-start.md
docs/zh/api-reference/: image-generation.md  openai-api.md
docs/zh/deployment/: configuration.md  docker.md
docs/zh/development/: development.md
docs/zh/getting-started/: quick-start.md
frontend/: .oxfmtrc.json  .oxlintrc.json  index.html  package.json  playwright.config.ts  vite.config.ts
frontend/messages/: en.json  zh-CN.json
frontend/project.inlang/: settings.json
frontend/src/: authenticated-layout.tsx  index.css  main.tsx  sidebar.ts
frontend/src/components/: auth-guard.tsx  auto-complete-select.tsx  auto-complete.tsx  command-menu.tsx  confirm-dialog.tsx  data-table-column-header.tsx  data-table-faceted-filter.tsx  data-table-pagination.tsx  initialization-guard.tsx  json-tree-view.tsx  language-provider.tsx  language-switch.tsx  learn-more.tsx  long-text.tsx  model-price-editor.tsx  navigation-progress.tsx  password-input.tsx  permission-guard.tsx  project-guard.tsx  quota-badges.tsx  route-guard.tsx  scopes-select.tsx  search.tsx  select-dropdown.tsx  server-side-pagination.tsx  spinner.tsx  theme-switch.tsx  time-period-selector.tsx  truncated-text.tsx
frontend/src/gql/: graphql.ts  models.ts  scopes.ts  useUsageLogPermissions.ts
frontend/src/hooks/: use-click-outside.ts  use-copy-to-clipboard.ts  use-error-handler.ts  use-pagination-search.ts  use-version-check.ts  useAnimatedList.ts  useLanguage.ts  usePermissions.ts  (+2 more)
frontend/tests/: api-keys.spec.ts  auth.utils.ts  channels.spec.ts  copilot-device-flow.spec.ts  data-storages.spec.ts  mobile-layout.spec.ts  models.spec.ts  project-roles.spec.ts  project-users.spec.ts  projects.spec.ts  roles.spec.ts  setup.spec.ts  system.spec.ts  usage-logs.spec.ts  users-projects.spec.ts  users-roles.spec.ts  users.spec.ts
internal/ent/: channel_create.go  channel_update.go  entql.go  gql_collection.go  gql_mutation_input.go  gql_node_descriptor.go  gql_where_input.go  mutation.go
internal/server/: routes.go  server.go
llm/: model.go
llm/httpclient/: client.go  client_test.go  utils.go
(+520 files in other folders)
