[workspace]
resolver = "2"
members = [
  "apps/axonhub-server",
  "crates/axonhub-config",
  "crates/axonhub-http",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR LGPL-3.0"
rust-version = "1.78"
version = "0.9.20"

[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["json"] }
humantime = "2.1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }
axonhub-config = { path = "crates/axonhub-config" }
axonhub-http = { path = "crates/axonhub-http" }
