[workspace]
resolver = "2"
members = [
  "apps/axonhub-server",
  "crates/axonhub-db-entity",
  "crates/axonhub-db-migration",
  "crates/axonhub-config",
  "crates/axonhub-http",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR LGPL-3.0"
rust-version = "1.78"
version = "0.9.20"

[workspace.dependencies]
actix-multipart = "0.7"
actix-cors = "0.7"
actix-web = "4.12"
anyhow = "1.0"
async-graphql = "7.0"
axum = { version = "0.8", features = ["json"] }
bcrypt = "0.19"
base64 = "0.22"
bytes = "1.11"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
getrandom = "0.3"
hex = "0.4"
humantime = "2.3"
http = "1.4"
http-body-util = "0.1"
jsonwebtoken = "9.3"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-stdout = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics"] }
pg-embed = { version = "0.7", default-features = false, features = ["rt_tokio"] }
postgres = "0.19"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "rustls"] }
regex = "1.12"
rust-embed = "8.11"
rusqlite = { version = "0.32", features = ["bundled"] }
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
sea-orm-migration = { version = "2.0.0-rc.37", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
tokio = { version = "1.51", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axonhub-db-entity = { path = "crates/axonhub-db-entity" }
axonhub-db-migration = { path = "crates/axonhub-db-migration" }
axonhub-config = { path = "crates/axonhub-config" }
axonhub-http = { path = "crates/axonhub-http" }
