[package]
name = "axonhub-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "axonhub"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-graphql = "7.0.17"
bcrypt.workspace = true
getrandom = "0.2.17"
hex.workspace = true
humantime.workspace = true
jsonwebtoken.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
postgres = "0.19.12"
reqwest.workspace = true
rusqlite.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

axonhub-db-entity.workspace = true
axonhub-db-migration.workspace = true
axonhub-config.workspace = true
axonhub-http.workspace = true

[dev-dependencies]
axum.workspace = true
pg-embed = { version = "1.0.0", default-features = false, features = ["rt_tokio"] }
tower.workspace = true
