[package]
name = "axonhub-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "axonhub"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
bcrypt.workspace = true
clap = { version = "4.5.39", features = ["derive"] }
getrandom.workspace = true
hex.workspace = true
humantime.workspace = true
jsonwebtoken.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
postgres.workspace = true
reqwest.workspace = true
regex = "1.11.1"
rusqlite.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

axonhub-db-entity.workspace = true
axonhub-db-migration.workspace = true
axonhub-config.workspace = true
axonhub-http.workspace = true

[dev-dependencies]
axum.workspace = true
pg-embed.workspace = true
tower.workspace = true
