[package]
name = "axonhub-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "axonhub"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
bcrypt.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
humantime.workspace = true
jsonwebtoken.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
regex.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

axonhub-db-entity.workspace = true
axonhub-db-migration.workspace = true
axonhub-config.workspace = true
axonhub-http.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true
rusqlite.workspace = true
