[package]
name = "axonhub-db-migration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "axonhub_db_migration"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true

[dev-dependencies]
tokio.workspace = true
