[package]
name = "axonhub-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
bytes.workspace = true
humantime.workspace = true
http.workspace = true
http-body-util.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
