[package]
name = "axonhub-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
actix-multipart.workspace = true
actix-cors.workspace = true
actix-web.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
humantime.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
